cocoa: don't draw info icon focus ring over location bar text

This change insets the page info icon's focus ring when the page info icon is
just an icon (i.e., no text). In this case, the page info icon is right next to
the location bar text, so the focus ring overdraws the location bar text.

Bug: 732745
Change-Id: Ide977186d299179d67a7d8bd94ccad52baecf1f2
Reviewed-on: https://chromium-review.googlesource.com/713697
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508076}
Former-commit-id: b7c1cb6c6926f4a01ed7740b6b416a409c05ab23